--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
             <a class="nav-link fs-5 hover me-3" href="./lineup.html">Line-up</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link fs-5 hover me-3" href="./lineup.html">New Project</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link fs-5 hover me-3 p3" href="./muave.html">Mua vé</a>
           </li>
         </ul>
